[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "sivtools"
author = "Aly Sivji"
author-email = "alysivji@gmail.com"
home-page = "https://github.com/alysivji/sivtools"
requires = []
description-file = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.3,<4"
keywords="toolbox utilities"
license="MIT"

[tool.flit.sdist]
exclude = ["tests"]
